fix[close #225]: bad contrast on some colors in dark mode

--- a/public/assets/css/colors/dark.css
+++ b/public/assets/css/colors/dark.css
@@ -30,10 +30,10 @@
         --accent-brown-bg-color-light: #f1e3cd;
         --accent-brown-bg-color-deep: #c5bdaf;
         --accent-brown-text-color: #D8D0C2;
-        --accent-green-bg-color: #bcdcbd;
+        --accent-green-bg-color: #2C3A2C;
         --accent-green-bg-color-vivid: #00BE6C;
         --accent-green-bg-color-light: #2a3d32;
-        --accent-green-bg-color-deep: #b5cab6;
+        --accent-green-bg-color-deep: #232F23;
         --accent-green-text-color: #809d88;
         --accent-pink-bg-color: #ffc7eb;
         --accent-pink-bg-color-vivid: #FF00BF;
@@ -43,7 +43,7 @@
         --accent-purple-bg-color-vivid: #7c3cc7;
         --accent-purple-bg-color-light: #e4d3f1;
         --accent-purple-bg-color-deep: #2a1f36;
-        --accent-purple-text-color: #2f1e40;
+        --accent-purple-text-color: #B89ED1;
         --accent-red-bg-color: #3c2c2c;
         --accent-red-bg-color-vivid: #c73c3c;
         --accent-red-bg-color-light: #f1d3d3;
